correct validate, visible delete on informationBoard

--- a/src/main/webapp/resources/mytheme/css/style.css
+++ b/src/main/webapp/resources/mytheme/css/style.css
@@ -3464,3 +3464,19 @@ header .logout {
   right: 0;
   top: 0;
 }
+html {
+    position: relative;
+    min-height: 100%;
+}
+body {
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+}
+#footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 60px;
+    background-color: #f5f5f5;
+}
